--- a/app/webapp/templates/webapp/base.html
+++ b/app/webapp/templates/webapp/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{{ APP_NAME }}{% endblock %}</title>
+    <link rel="icon" type="image/png" href="/static/logo.png">
     {% htmx_script %}
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
