--- a/app/webapp/templates/webapp/base.html
+++ b/app/webapp/templates/webapp/base.html
@@ -49,6 +49,7 @@
                 </div>
                 <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
                     <a href="/" class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-accent">Home</a>
+                    <a href="{% url 'sailboats_index' %}" class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent hover:border-accent">Sailboats</a>
                     <!-- Add more navigation items here -->
                 </div>
                 <div class="flex items-center">
