--- a/app/webapp/templates/webapp/base.html
+++ b/app/webapp/templates/webapp/base.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
+
     <script>
         tailwind.config = {
             theme: {
@@ -37,6 +38,7 @@
             }
         }
     </style>
+    {% block extra_head %}{% endblock %}
 </head>
 <body class="bg-white text-gray-900 min-h-screen">
     <header class="bg-white shadow-sm">
